--- a/components/layout.module.scss
+++ b/components/layout.module.scss
@@ -1,5 +1,26 @@
-.container {
-  max-width: 36rem;
-  padding: 0 1rem;
-  margin: 3rem auto 6rem;
+//.container {
+//  max-width: 36rem;
+//  padding: 0 1rem;
+//  margin: 3rem auto 6rem;
+//}
+
+.content {
+  margin-top: 55px;
+  padding: 40px 0 0;
+  min-height: calc(100vh - 190px);
+}
+//.container{
+//  padding: 0px 2rem;
+//  max-width: 800px;
+//  padding: 0 1.5rem;
+//  margin-left: auto;
+//  margin-right: auto;
+//}
+
+@media (min-width: 620px) {
+  .content {
+    margin-top: 140px;
+    padding: 60px 0 0;
+    min-height: calc(100vh - 360px);
+  }
 }
