--- a/styles/global.scss
+++ b/styles/global.scss
@@ -1,9 +1,31 @@
-@import '../node_modules/bulma/sass/utilities/_all.sass';
-@import '../node_modules/bulma/sass/base/_all.sass';
-@import '../node_modules/bulma/sass/elements/button.sass';
-@import '../node_modules/bulma/sass/elements/container.sass';
-@import '../node_modules/bulma/sass/form/_all.sass';
-@import '../node_modules/bulma/sass/elements/title.sass';
-@import '../node_modules/bulma/sass/components/navbar.sass';
-@import '../node_modules/bulma/sass/layout/hero.sass';
-@import '../node_modules/bulma/sass/layout/section.sass';
+//@import '../node_modules/bulma/sass/utilities/_all.sass';
+//@import '../node_modules/bulma/sass/base/_all.sass';
+//@import '../node_modules/bulma/sass/elements/button.sass';
+//@import '../node_modules/bulma/sass/elements/container.sass';
+//@import '../node_modules/bulma/sass/form/_all.sass';
+//@import '../node_modules/bulma/sass/elements/title.sass';
+//@import '../node_modules/bulma/sass/components/navbar.sass';
+//@import '../node_modules/bulma/sass/layout/hero.sass';
+//@import '../node_modules/bulma/sass/layout/section.sass';
+@import 'bulma/bulma';
+//@import 'bulma-extensions/extensions';
+
+
+.lead h1.title{
+  margin-top: 0;
+  font-weight: 700;
+  font-size: 2.8rem;
+  margin-bottom: 1.5rem;
+  letter-spacing: -.03rem;
+}
+
+.container{
+
+}
+
+.navbar-brand a{
+  font-size: 1.3rem;
+}
+.navbar-item img {
+  max-height: 3.75rem;
+}
