--- a/styles/global.scss
+++ b/styles/global.scss
@@ -22,6 +22,12 @@
 .nav-container{
   display: flex;
   justify-content: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 3;
+  width: 100%;
+  background: #fff;
 }
 
 .navbar-brand a{
